Comment out which defaults has been overridden

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@
 # https://robots.thoughtbot.com/love-hate-tmux
 # https://gist.github.com/MohamedAlaa/2961058
 # https://github.com/tmux-plugins/tmux-sensible
+# https://github.com/tmux-plugins/tmux-pain-control
 # https://learnxinyminutes.com/docs/tmux
 
 # Hierarchy:
@@ -43,7 +44,7 @@ source-file -q ~/dotfiles/tmux-osx.conf
 set-option -s escape-time 0
 
 # increase scrollback buffer size
-set-option -g history-limit 50000
+set-option -g history-limit 30000
 
 # tmux messages are displayed for 3 seconds
 set-option -g display-time 3000
@@ -54,7 +55,7 @@ set-option -g display-panes-time 3000
 # devault value is 15
 # set-option -g status-interval 10
 
-# Unbind C-b (the default prefix)
+# unbind-key C-b (the default prefix)
 unbind-key C-b
 # C-b is not acceptable as a prefix, neither C-a, because both are used by Vim
 # http://superuser.com/a/178223/578741
@@ -115,51 +116,6 @@ set-window-option -g automatic-rename-format "#{b:pane_title}"
 # prefix c
 # bind-key c new-window -c "#{pane_current_path}"
 
-# horizontal split
-bind-key % split-window -h -c "#{pane_current_path}"
-
-# vertical split
-bind-key '"' split-window -c "#{pane_current_path}"
-
-# Moving windows
-bind-key -r > swap-window -t :+
-bind-key -r < swap-window -t :-
-# http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
-bind-key : swap-window -t 1
-
-# Switch to last session
-unbind L
-bind-key n switch-client -l
-bind-key 1 switch-client -p
-bind-key 2 switch-client -n
-
-# swap the last active pane/window with the current window.
-bind-key r swap-pane -s !
-bind-key 5 swap-pane -U
-bind-key 3 swap-pane -D
-
-# brackets layout
-# bind-key ( select-window -t :=1
-# bind-key ) select-window -t :=2
-# bind-key ] select-window -t :=3
-# bind-key + select-window -t :=4
-# bind-key [ select-window -t :=5
-# bind-key } select-window -t :=6
-# bind-key { select-window -t :=7
-# bind-key ! select-window -t :=8
-# bind-key = select-window -t :=9
-
-bind-key ( select-window -t :=1
-bind-key ) select-window -t :=2
-bind-key } select-window -t :=3
-bind-key + select-window -t :=4
-bind-key { select-window -t :=5
-bind-key ] select-window -t :=6
-bind-key [ select-window -t :=7
-bind-key ! select-window -t :=8
-bind-key = select-window -t :=9
-bind-key * choose-buffer
-
 # shortcut for reloading config
 bind-key R source-file ~/.tmux.conf \; display-message "[tmux] reloaded"
 
@@ -180,35 +136,55 @@ bind-key -n 'M-t' run 'tmux capture-pane -S -10000 -p > /tmp/tmux-capture.txt'\;
 # Enter = copy-selection-and-cancel
 # C-d   = halfpage-down
 # C-u   = halfpage-up
+# default: - delete-buffer
 bind-key - copy-mode
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 bind-key -T copy-mode-vi '+' send -X halfpage-down
 bind-key -T copy-mode-vi '-' send -X halfpage-up
 # bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 
+# Switch to last session
+# default: L switch-client -l
+# default: n next-window
+unbind-key L
+bind-key n switch-client -l
+bind-key 1 switch-client -p
+bind-key 2 switch-client -n
+
+# default: ( switch-client -p
+bind-key ( select-window -t :=1
+# default: ) switch-client -n
+bind-key ) select-window -t :=2
+# default: } swap-pane -D
+bind-key } select-window -t :=3
+bind-key + select-window -t :=4
+# default: { swap-pane -U
+bind-key { select-window -t :=5
+# default: ] paste-buffer
+bind-key ] select-window -t :=6
+# default: [ copy-mode
+bind-key [ select-window -t :=7
+# default: ! break-pane
+bind-key ! select-window -t :=8
+# default: = choose-buffer
+bind-key = select-window -t :=9
+bind-key * choose-buffer
 
 # switch to last window
-unbind l
-bind-key Space last-window
+bind-key a last-window
 
-# bind-key h previous-window
 # mnemonic ng
 bind-key g next-window
 bind-key p previous-window
 
-# send prefix key, if not in vim
-# <C-Space><C-Space> (whithout depressing ctrl)
-bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
+# default: i display-message
+# default: q display-panes
+unbind-key q
+bind-key u display-panes
 
-# Restoring Clear Screen (C-l)
-bind-key Escape send-keys C-l
-
-# jump between panes
-bind-key h select-pane -t :.-
-bind-key u select-pane -t :.+
-
-# default: o = select-pane -t :.+
-bind-key o display-panes
+# bind-key q confirm-before -p "kill-pane #P? (y/n)" kill-pane
+# unbind-key &
+# bind-key x confirm-before -p "kill-window #W? (y/n)" kill-window
 
 bind-key \; command-prompt
 
@@ -231,18 +207,43 @@ bind-key @ join-pane -s !
 # Move pane to new Tab(window)
 bind-key T break-pane
 
-# resize panes using PREFIX + shift + [hjkc]
+# swap the last active pane/window with the current window.
+# default: r refresh-client
+bind-key r swap-pane -s !
+bind-key 5 swap-pane -U
+bind-key 3 swap-pane -D
+
+# jump between panes
+# default: o select-pane -t :.+
+bind-key O select-pane -t :.-
+
+# pane_resizing_bindings
 # https://github.com/tmux-plugins/tmux-pain-control
 bind-key -r H resize-pane -L 5
 bind-key -r J resize-pane -D 5
 bind-key -r K resize-pane -U 5
-bind-key -r C resize-pane -R 5
+bind-key -r L resize-pane -R 5
 
-bind-key M-v select-layout even-horizontal
-bind-key M-h select-layout even-vertical
-bind-key M-n next-layout
+# pane_split_bindings
+# https://github.com/tmux-plugins/tmux-pain-control/blob/master/screenshots/pane_splitting.gif
+bind-key "|" split-window -h -c "#{pane_current_path}"
+bind-key "\\" split-window -fh -c "#{pane_current_path}"
+bind-key "-" split-window -v -c "#{pane_current_path}"
+bind-key "_" split-window -fv -c "#{pane_current_path}"
+bind-key "%" split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
 
-# bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
+# window_move_bindings
+bind-key -r > swap-window -t :+
+bind-key -r < swap-window -t :-
+# http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
+bind-key : swap-window -t 1
+
+# pane_navigation_bindings
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -258,7 +259,21 @@ bind-key -T copy-mode-vi C-j select-pane -D
 bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-c select-pane -R
 bind-key -T copy-mode-vi C-\ select-pane -l
+
 bind-key -n C-l send-keys "C-c"
+# Restoring Clear Screen (C-l)
+bind-key Escape send-keys C-l
+
+# quick layouts preset
+bind-key M-v select-layout even-horizontal
+bind-key M-h select-layout even-vertical
+bind-key M-n next-layout
+
+# send prefix key to nested tmux session
+# <C-Space><C-Space> (whithout depressing ctrl)
+bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
+
+# bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
 # if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
 source-file -q ~/dotfiles/tmuxcolors-light.conf
