bind '#' copy-mode

--- a/tmux.conf
+++ b/tmux.conf
@@ -136,8 +136,8 @@ bind-key -n 'M-t' run 'tmux capture-pane -S -10000 -p > /tmp/tmux-capture.txt'\;
 # Enter = copy-selection-and-cancel
 # C-d   = halfpage-down
 # C-u   = halfpage-up
-# default: - delete-buffer
-bind-key - copy-mode
+# default: # list-buffers
+bind-key '#' copy-mode
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 bind-key -T copy-mode-vi '+' send -X halfpage-down
 bind-key -T copy-mode-vi '-' send -X halfpage-up
@@ -228,6 +228,7 @@ bind-key -r L resize-pane -R 5
 # https://github.com/tmux-plugins/tmux-pain-control/blob/master/screenshots/pane_splitting.gif
 bind-key "|" split-window -h -c "#{pane_current_path}"
 bind-key "\\" split-window -fh -c "#{pane_current_path}"
+# default: - delete-buffer
 bind-key "-" split-window -v -c "#{pane_current_path}"
 bind-key "_" split-window -fv -c "#{pane_current_path}"
 bind-key "%" split-window -h -c "#{pane_current_path}"
