bind C new-window with current path

--- a/tmux.conf
+++ b/tmux.conf
@@ -113,8 +113,7 @@ set-window-option -g automatic-rename-format "#{b:pane_title}"
 # -------------------------------------------------------------------
 # Key bindings
 # -------------------------------------------------------------------
-# prefix c
-# bind-key c new-window -c "#{pane_current_path}"
+bind-key C new-window -c "#{pane_current_path}"
 
 # shortcut for reloading config
 bind-key R source-file ~/.tmux.conf \; display-message "[tmux] reloaded"
