--- a/tmux.conf
+++ b/tmux.conf
@@ -124,7 +124,8 @@ bind-key R source-file ~/.tmux.conf \; display-message "[tmux] reloaded"
 bind-key -n 'M-g' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
 
 # Capture pane and open in Vim
-bind-key -n 'M-t' run 'tmux capture-pane -S -10000 -p > /tmp/tmux-capture.txt'\;\
+# mnemonic capture
+bind-key -n 'M-c' run 'tmux capture-pane -S -10000 -p > /tmp/tmux-capture.txt'\;\
              new-window "nvim /tmp/tmux-capture.txt"
 
 # copy-mode-vi bindings
