bind ^ for swap-window -t 1

--- a/tmux.conf
+++ b/tmux.conf
@@ -235,10 +235,10 @@ bind-key "%" split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -v -c "#{pane_current_path}"
 
 # window_move_bindings
+# http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
 bind-key -r > swap-window -t :+
 bind-key -r < swap-window -t :-
-# http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
-bind-key : swap-window -t 1
+bind-key ^ swap-window -t 1
 
 # pane_navigation_bindings
 bind-key h select-pane -L
