bind g to switch-client -l

--- a/tmux.conf
+++ b/tmux.conf
@@ -144,10 +144,7 @@ bind-key -T copy-mode-vi '-' send -X halfpage-up
 # bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 
 # Switch to last session
-# default: L switch-client -l
-# default: n next-window
-unbind-key L
-bind-key n switch-client -l
+bind-key g switch-client -l
 bind-key 1 switch-client -p
 bind-key 2 switch-client -n
 
@@ -222,6 +219,7 @@ bind-key O select-pane -t :.-
 bind-key -r H resize-pane -L 5
 bind-key -r J resize-pane -D 5
 bind-key -r K resize-pane -U 5
+# default: L switch-client -l
 bind-key -r L resize-pane -R 5
 
 # pane_split_bindings
