bind b to join the last active pane/window to the current one

--- a/tmux.conf
+++ b/tmux.conf
@@ -199,7 +199,8 @@ bind-key 0 set-window-option synchronize-pane
 bind-key j join-pane
 
 # join the last active pane/window to the current window.
-bind-key @ join-pane -s !
+# mnemonic bind
+bind-key b join-pane -s !
 
 # Move pane to new Tab(window)
 bind-key T break-pane
