bind X to kill-windown

--- a/tmux.conf
+++ b/tmux.conf
@@ -168,20 +168,11 @@ bind-key = select-window -t :=9
 bind-key * choose-buffer
 
 # switch to last window
+# mnemonic alternate
 bind-key a last-window
 
-# mnemonic ng
-bind-key g next-window
-bind-key p previous-window
-
-# default: i display-message
-# default: q display-panes
-unbind-key q
-bind-key u display-panes
-
-# bind-key q confirm-before -p "kill-pane #P? (y/n)" kill-pane
-# unbind-key &
-# bind-key x confirm-before -p "kill-window #W? (y/n)" kill-window
+unbind-key &
+bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
 
 bind-key \; command-prompt
 
