bind u to clearscr; bind q next-layout; bind Space display-panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -253,16 +253,22 @@ bind-key -T copy-mode-vi C-\ select-pane -l
 
 bind-key -n C-l send-keys "C-c"
 # Restoring Clear Screen (C-l)
-bind-key Escape send-keys C-l
+# mnemonic <C-u> clears line in zsh
+bind-key u send-keys C-l
 
 # quick layouts preset
 bind-key M-v select-layout even-horizontal
 bind-key M-h select-layout even-vertical
-bind-key M-n next-layout
+bind-key M-t select-layout tiled
+# default: q display-panes
+bind-key q next-layout
+bind-key Q previous-layout
 
 # send prefix key to nested tmux session
 # <C-Space><C-Space> (whithout depressing ctrl)
 bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
+# default: Space next-layout
+bind-key Space display-panes
 
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
