plugin: Morantron/tmux-fingers

--- a/tmux.conf
+++ b/tmux.conf
@@ -279,16 +279,19 @@ source-file -q ~/dotfiles/tmuxcolors-light.conf
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-cpu'
-# set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @plugin 'Morantron/tmux-fingers'
 # set -g @plugin 'tmux-plugins/tmux-copycat'
 # set -g @plugin 'thalesmello/tmux-copycat'
 # set -g @plugin 'tmux-plugins/tmux-open'
-# set -g @plugin 'tmux-plugins/tmux-sidebar'
 # set -g @plugin 'jbnicolai/tmux-fpp'
 
 set -g @cpu_low_fg_color "#[fg=black]"
 set -g @cpu_medium_fg_color "#[fg=black]"
 set -g @cpu_high_fg_color "#[fg=black]"
+
+# set -g @fingers-hint-format "#[bg=white,fg=colour230,bold]%s"
+set -g @fingers-hint-format "#[bg=white,fg=black]%s"
+set -g @fingers-hint-format-nocompact "#[bg=white,fg=black][%s]"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
