--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,9 +26,10 @@
 # -------------------------------------------------------------------
 # ~/dotfiles/resources/screen-256color.terminfo
 set-option -g default-terminal "screen-256color"
-# improve colors
+
+# Add truecolor support (tmux info | rg Tc)
 # https://wiki.archlinux.org/index.php/Tmux#24-bit_color
-set-option -ga terminal-overrides ",*:Tc"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # <S-Home><S-End>
 # set-option -ga terminal-overrides ',xterm-256color:kEND=\E[F:kHOM=\E[H'
@@ -38,7 +39,7 @@ set-option -ga terminal-overrides ",*:Tc"
 set-option -g xterm-keys on
 
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/issues/8
-source-file -q ~/dotfiles/tmux-osx.conf
+source-file -q ~/.tmux-osx.conf
 
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
 set-option -s escape-time 0
@@ -91,7 +92,6 @@ set -g status-right '#{prefix_highlight}#{cpu_bg_color}#{cpu_fg_color} CPU: #{cp
 # -------------------------------------------------------------------
 # Window options
 # -------------------------------------------------------------------
-# Copy-mode
 set-window-option -g mode-keys vi
 
 set-window-option -g pane-base-index 1
@@ -120,13 +120,14 @@ bind-key R source-file ~/.tmux.conf \; display-message "[tmux] reloaded"
 
 # fzf-locate
 # https://github.com/junegunn/fzf/wiki/Examples-(tmux)
-# -n means binding without prefix
+# -n is an alias for -T root, means bypass prefix
 bind-key -n 'M-g' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
 
-# Capture pane and open in Vim
-# mnemonic capture
-bind-key -n 'M-c' run 'tmux capture-pane -S -10000 -p > /tmp/tmux-capture.txt'\;\
-             new-window "nvim /tmp/tmux-capture.txt"
+# Capture pane and open in nvim
+bind-key M-c run 'tmux capture-pane -S -10000 -p > /tmp/tmux-capture.txt' \; new-window "nvim /tmp/tmux-capture.txt"
+
+# Screen capture
+bind-key M-s run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of window 1') -x -o -P /tmp/$(date +%Y%m%d-%H%M%S).png"
 
 # copy-mode-vi bindings
 # https://github.com/tmux/tmux/issues/592
@@ -273,7 +274,7 @@ bind-key Space display-panes
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
 # if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
-source-file -q ~/dotfiles/tmuxcolors-light.conf
+source-file -q ~/.tmux-gruvbox-$BACKGROUND.conf
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
