--- a/tmux/tmux-gruvbox-light.conf
+++ b/tmux/tmux-gruvbox-light.conf
@@ -18,8 +18,10 @@ set-window-option -g window-status-activity-style "bg=colour144,fg=colour230,ita
 set-window-option -g window-status-bell-style "bg=red,fg=black"
 
 # pane border
-set-option -g pane-border-fg white
-set-option -g pane-active-border-fg green
+# set-option -g pane-border-status bottom
+# set-option -g pane-border-format "#{pane_index} #{pane_current_command}"
+# set-option -g pane-border-fg white
+# set-option -g pane-active-border-fg green
 
 # message text
 set-option -g message-style "bg=colour230,fg=brightred"
