load tmux-gruvbox colorscheme

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -274,7 +274,7 @@ bind-key Space display-panes
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
 # if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
-source-file -q ~/.tmux-gruvbox-$BACKGROUND.conf
+source-file -q ~/.tmux-gruvbox-${BACKGROUND:-light}.conf
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
