Limit pane_title

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -108,7 +108,7 @@ set-window-option -g monitor-activity on
 # https://unix.stackexchange.com/questions/235272/format-tmuxs-pane-current-path/393072#393072
 # The default  window-status-format is `#I:#W#F'
 # set-window-option -g automatic-rename-format "#{b:pane_current_path}"
-set-window-option -g automatic-rename-format "#{b:pane_title}"
+set-window-option -g automatic-rename-format "#{=16:pane_title}"
 
 # -------------------------------------------------------------------
 # Key bindings
