tmux conf update

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -108,7 +108,8 @@ set-window-option -g monitor-activity on
 # https://unix.stackexchange.com/questions/235272/format-tmuxs-pane-current-path/393072#393072
 # The default  window-status-format is `#I:#W#F'
 # set-window-option -g automatic-rename-format "#{b:pane_current_path}"
-set-window-option -g automatic-rename-format "#{=16:pane_title}"
+# set-window-option -g automatic-rename-format "#{=16:pane_title}"
+set-window-option -g automatic-rename-format "#{b:pane_title}"
 
 # -------------------------------------------------------------------
 # Key bindings
@@ -169,8 +170,8 @@ bind-key = select-window -t :=9
 bind-key * choose-buffer
 
 # switch to last window
-# mnemonic alternate
-bind-key a last-window
+# default: Space next-layout
+bind-key Space last-window
 
 unbind-key &
 bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
@@ -268,13 +269,13 @@ bind-key Q previous-layout
 # send prefix key to nested tmux session
 # <C-Space><C-Space> (whithout depressing ctrl)
 bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
-# default: Space next-layout
-bind-key Space display-panes
+bind-key a display-panes
 
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
 # if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
-source-file -q ~/.tmux-gruvbox-${BACKGROUND:-light}.conf
+# source-file ~/.tmux-gruvbox-${BACKGROUND:-light}.conf
+source-file ~/.tmux-gruvbox-${BACKGROUND}.conf
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -286,13 +287,13 @@ set -g @plugin 'Morantron/tmux-fingers'
 # set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'jbnicolai/tmux-fpp'
 
-set -g @cpu_low_fg_color "#[fg=black]"
-set -g @cpu_medium_fg_color "#[fg=black]"
-set -g @cpu_high_fg_color "#[fg=black]"
+set -g @cpu_low_fg_color "#[fg=colour230]"
+set -g @cpu_medium_fg_color "#[fg=colour230]"
+set -g @cpu_high_fg_color "#[fg=colour230]"
 
 # set -g @fingers-hint-format "#[bg=white,fg=colour230,bold]%s"
-set -g @fingers-hint-format "#[bg=white,fg=black]%s"
-set -g @fingers-hint-format-nocompact "#[bg=white,fg=black][%s]"
+set -g @fingers-hint-format "#[bg=white,fg=colour230]%s"
+set -g @fingers-hint-format-nocompact "#[bg=white,fg=colour230][%s]"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
