--- a/tmux/tmux-gruvbox-light.conf
+++ b/tmux/tmux-gruvbox-light.conf
@@ -6,22 +6,22 @@
 set-option -g status-style "bg=colour230,fg=colour244"
 
 # default window title colors
-set-window-option -g window-status-style "bg=colour144,fg=black"
+set-window-option -g window-status-style "bg=colour144,fg=colour230"
 
 # currently active window
-set-window-option -g window-status-current-style "bg=green,fg=black"
+set-window-option -g window-status-current-style "bg=green,fg=colour230"
 
 # windows with an activity alert
 set-window-option -g window-status-activity-style "bg=colour144,fg=colour230,italics"
 
 # bell
-set-window-option -g window-status-bell-style "bg=red,fg=black"
+set-window-option -g window-status-bell-style "bg=red,fg=colour230"
 
 # pane border
 # set-option -g pane-border-status bottom
 # set-option -g pane-border-format "#{pane_index} #{pane_current_command}"
-# set-option -g pane-border-fg white
-# set-option -g pane-active-border-fg green
+set-option -g pane-border-fg white
+set-option -g pane-active-border-fg yellow
 
 # message text
 set-option -g message-style "bg=colour230,fg=brightred"
