--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -173,7 +173,7 @@ bind-key * choose-buffer
 # default: Space next-layout
 bind-key Space last-window
 
-unbind-key &
+# unbind-key &
 bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
 
 bind-key \; command-prompt
@@ -189,7 +189,7 @@ bind-key 0 set-window-option synchronize-pane
 
 # Marked pane must be present (prefix-m), for the following to work
 # The marked pane will be used as -s src-pane, whereas -t dst-pane is active pane
-bind-key j join-pane
+bind-key & join-pane
 
 # join the last active pane/window to the current window.
 # mnemonic bind
