--- a/tmux/tmux-gruvbox-dark.conf
+++ b/tmux/tmux-gruvbox-dark.conf
@@ -1,58 +1,44 @@
-## COLORSCHEME: gruvbox dark
-set-option -g status "on"
-
 # default statusbar colors
-set-option -g status-bg colour237 #bg1
-set-option -g status-fg colour223 #fg1
+set-option -g status-style "bg=colour236"
+
+set-option -g status-right-style "bold"
 
 # default window title colors
-set-window-option -g window-status-bg colour214 #yellow
-set-window-option -g window-status-fg colour237 #bg1
+set-window-option -g window-status-style "bg=colour59,fg=colour236"
+# set-window-option -g window-status-style "bg=colour59"
 
-set-window-option -g window-status-activity-bg colour237 #bg1
-set-window-option -g window-status-activity-fg colour248 #fg3
+# currently active window
+set-window-option -g window-status-current-style "bg=colour101,fg=colour236,bold"
+# set-window-option -g window-status-current-style "bg=colour101"
 
-# active window title colors
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-fg colour237 #bg1
-
-# pane border
-set-option -g pane-active-border-fg colour250 #fg2
-set-option -g pane-border-fg colour237 #bg1
-
-# message infos
-set-option -g message-bg colour239 #bg2
-set-option -g message-fg colour223 #fg1
-
-# writting commands inactive
-set-option -g message-command-bg colour239 #fg3
-set-option -g message-command-fg colour223 #bg1
-
-# pane number display
-set-option -g display-panes-active-colour colour250 #fg2
-set-option -g display-panes-colour colour237 #bg1
-
-# clock
-set-window-option -g clock-mode-colour colour109 #blue
+# windows with an activity alert
+set-window-option -g window-status-activity-style "bg=colour102,fg=colour236,italics"
+# set-window-option -g window-status-activity-style "bg=colour102,italics"
 
 # bell
-set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
+set-window-option -g window-status-bell-style "bg=red,fg=colour236"
 
+# pane border
+# set-option -g pane-border-status bottom
+# set-option -g pane-border-format "#{pane_index} #{pane_current_command}"
+set-option -g pane-border-fg colour59
+set-option -g pane-active-border-fg colour58
 
-## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g status-attr "none"
-set-option -g status-justify "left"
-set-option -g status-left-attr "none"
-set-option -g status-left-length "80"
-set-option -g status-right-attr "none"
-set-option -g status-right-length "80"
-set-window-option -g window-status-activity-attr "none"
-set-window-option -g window-status-attr "none"
-set-window-option -g window-status-separator ""
+# message text
+set-option -g message-style "fg=brightred,bold"
 
-# set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
-# set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
+# pane number display
+set-option -g display-panes-active-colour green
+set-option -g display-panes-colour white
 
-# set-window-option -g window-status-current-format "#[fg=colour239, bg=colour248, :nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
-# set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
+# clock
+# set-window-option -g clock-mode-colour green
 
+set -g @cpu_low_fg_color "#[fg=colour236]"
+set -g @cpu_low_bg_color "#[bg=colour101]"
+set -g @cpu_medium_fg_color "#[fg=colour236]"
+set -g @cpu_high_fg_color "#[fg=colour236]"
+
+# set -g @fingers-hint-format "#[bg=white,fg=colour230,bold]%s"
+set -g @fingers-hint-format "#[bg=red,fg=black]%s"
+set -g @fingers-hint-format-nocompact "#[bg=yellow,fg=black][%s]"
