tmux-theme files

--- a/tmux/tmux-theme-light.conf
+++ b/tmux/tmux-theme-light.conf
@@ -32,3 +32,11 @@ set-option -g display-panes-colour white
 
 # clock
 # set-window-option -g clock-mode-colour green
+
+set -g @cpu_low_fg_color "#[fg=colour230]"
+set -g @cpu_medium_fg_color "#[fg=colour230]"
+set -g @cpu_high_fg_color "#[fg=colour230]"
+
+# set -g @fingers-hint-format "#[bg=white,fg=colour230,bold]%s"
+set -g @fingers-hint-format "#[bg=white,fg=colour230]%s"
+set -g @fingers-hint-format-nocompact "#[bg=white,fg=colour230][%s]"
