--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -275,7 +275,7 @@ bind-key a display-panes
 
 # if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
 # source-file ~/.tmux-gruvbox-${BACKGROUND:-light}.conf
-source-file ~/.tmux-gruvbox-${BACKGROUND}.conf
+source-file ~/.tmux-theme-${BACKGROUND}.conf
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -286,14 +286,6 @@ set -g @plugin 'Morantron/tmux-fingers'
 # set -g @plugin 'thalesmello/tmux-copycat'
 # set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'jbnicolai/tmux-fpp'
-
-set -g @cpu_low_fg_color "#[fg=colour230]"
-set -g @cpu_medium_fg_color "#[fg=colour230]"
-set -g @cpu_high_fg_color "#[fg=colour230]"
-
-# set -g @fingers-hint-format "#[bg=white,fg=colour230,bold]%s"
-set -g @fingers-hint-format "#[bg=white,fg=colour230]%s"
-set -g @fingers-hint-format-nocompact "#[bg=white,fg=colour230][%s]"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
