tmux light theme minor update

--- a/tmux/tmux-theme-light.conf
+++ b/tmux/tmux-theme-light.conf
@@ -1,9 +1,11 @@
-# colour244 = dim gray
 # colour144 = dim green (haki)
 # colour230 = bright yellow
 
 # default statusbar colors
-set-option -g status-style "bg=colour230,fg=colour244"
+set-option -g status-style "bg=colour230"
+
+set-option -g status-left-style "fg=colour242"
+# set-option -g status-right-style "bold"
 
 # default window title colors
 set-window-option -g window-status-style "bg=colour144,fg=colour230"
@@ -24,7 +26,7 @@ set-option -g pane-border-fg white
 set-option -g pane-active-border-fg yellow
 
 # message text
-set-option -g message-style "bg=colour230,fg=brightred"
+set-option -g message-style "fg=brightred"
 
 # pane number display
 set-option -g display-panes-active-colour green
