some tmux_version check

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,6 +22,11 @@
 # - Window options (set-window-option [-g])
 
 # -------------------------------------------------------------------
+# TMUX_VERSION
+# -------------------------------------------------------------------
+run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | awk '{ print $2 }')"
+
+# -------------------------------------------------------------------
 # Session options
 # -------------------------------------------------------------------
 # ~/dotfiles/resources/screen-256color.terminfo
@@ -83,7 +88,7 @@ set-option -g history-limit 10000
 set-option -g mouse on
 
 # remove administrative debris (session name, hostname, time) in status bar
-# set -g status-left ''
+# set -g status-left '#{version}'
 # set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
 # set-option -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
 # set-option -g status-right '#{prefix_highlight} | #(xkbswitch -ge) | %a %d-%m-%Y %H:%M'
@@ -117,7 +122,7 @@ set-window-option -g automatic-rename-format "#{b:pane_title}"
 bind-key C new-window -c "#{pane_current_path}"
 
 # shortcut for reloading config
-bind-key R source-file ~/.tmux.conf \; display-message "[tmux] reloaded"
+bind-key R source-file ~/.tmux.conf \; display-message "[tmux #{version}] reloaded ~/.tmux.conf"
 
 # fzf-locate
 # https://github.com/junegunn/fzf/wiki/Examples-(tmux)
@@ -140,10 +145,13 @@ bind-key M-s run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of wi
 # C-u   = halfpage-up
 # default: # list-buffers
 bind-key '#' copy-mode
-bind-key -T copy-mode-vi 'y' send -X copy-selection
-bind-key -T copy-mode-vi '+' send -X halfpage-down
-bind-key -T copy-mode-vi '-' send -X halfpage-up
-# bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+
+is_tmux_modern='expr $TMUX_VERSION \>= 2.4'
+if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi y send -X copy-selection" "bind -tvi-copy y copy-selection"
+if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi Bspace send -X halfpage-up" "bind -tvi-copy Bspace halfpage-up"
+if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi Tab send -X halfpage-down" "bind -tvi-copy Tab halfpage-down"
+if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi J send -X -N5 cursor-down"
+if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi K send -X -N5 cursor-up"
 
 # Switch to last session
 bind-key g switch-client -l
