--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -61,6 +61,11 @@ set-option -g display-panes-time 3000
 # devault value is 15
 # set-option -g status-interval 10
 
+# Terminal emulator window title
+set-option -g set-titles on
+# Use hostname (@#h) in set-titles-string with SSH.
+if-shell 'test -n "$SSH_CONNECTION"' 'set -g set-titles-string "[tmux: #S:#I.#P @#h] #T"' 'set -g set-titles-string "[tmux: #S:#I.#P] #T"'
+
 # unbind-key C-b (the default prefix)
 unbind-key C-b
 # C-b is not acceptable as a prefix, neither C-a, because both are used by Vim
