better synchronize-panes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -186,14 +186,14 @@ bind-key * choose-buffer
 # default: Space next-layout
 bind-key Space last-window
 
-# unbind-key &
+unbind-key &
 bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
 
 bind-key \; command-prompt
 
 # Synchronize panes
 # https://sanctum.geek.nz/arabesque/sync-tmux-panes/
-bind-key 0 set-window-option synchronize-pane
+bind-key 0 set-window-option synchronize-panes \; display-message "synchronize-panes: #{?synchronize-panes,on,off}"
 
 # pane movement
 # http://unix.stackexchange.com/questions/14300/moving-tmux-pane-to-window
