--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -202,11 +202,10 @@ bind-key 0 set-window-option synchronize-panes \; display-message "synchronize-p
 
 # Marked pane must be present (prefix-m), for the following to work
 # The marked pane will be used as -s src-pane, whereas -t dst-pane is active pane
-bind-key & join-pane
+bind-key b join-pane
 
 # join the last active pane/window to the current window.
-# mnemonic bind
-bind-key b join-pane -s !
+bind-key e join-pane -s !
 
 # Move pane to new Tab(window)
 bind-key T break-pane
@@ -253,18 +252,17 @@ bind-key l select-pane -R
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-c if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-bind-key -T copy-mode-vi C-h select-pane -L
-bind-key -T copy-mode-vi C-j select-pane -D
-bind-key -T copy-mode-vi C-k select-pane -U
-bind-key -T copy-mode-vi C-c select-pane -R
-bind-key -T copy-mode-vi C-\ select-pane -l
+bind-key -Tcopy-mode-vi C-h select-pane -L
+bind-key -Tcopy-mode-vi C-j select-pane -D
+bind-key -Tcopy-mode-vi C-k select-pane -U
+bind-key -Tcopy-mode-vi C-c select-pane -R
+bind-key -Tcopy-mode-vi C-\ select-pane -l
 
 bind-key -n C-l send-keys "C-c"
 # Restoring Clear Screen (C-l)
@@ -287,7 +285,6 @@ bind-key a display-panes
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
 # if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
-# source-file ~/.tmux-gruvbox-${BACKGROUND:-light}.conf
 source-file ~/.tmux-theme-${BACKGROUND}.conf
 
 # List of plugins
