--- a/tmux/tmux-theme-dark.conf
+++ b/tmux/tmux-theme-dark.conf
@@ -1,18 +1,18 @@
 # default statusbar colors
-set-option -g status-style "bg=colour236"
+set-option -g status-style "default"
 
 set-option -g status-right-style "bold"
 
 # default window title colors
-set-window-option -g window-status-style "bg=colour59,fg=colour236"
+set-window-option -g window-status-style "bg=colour102,fg=colour236"
 # set-window-option -g window-status-style "bg=colour59"
 
 # currently active window
-set-window-option -g window-status-current-style "bg=colour101,fg=colour236,bold"
+set-window-option -g window-status-current-style "bg=colour142,fg=colour236,bold"
 # set-window-option -g window-status-current-style "bg=colour101"
 
 # windows with an activity alert
-set-window-option -g window-status-activity-style "bg=colour102,fg=colour236,italics"
+set-window-option -g window-status-activity-style "bg=colour101,fg=colour236"
 # set-window-option -g window-status-activity-style "bg=colour102,italics"
 
 # bell
