--- a/tmux/tmux-theme-light.conf
+++ b/tmux/tmux-theme-light.conf
@@ -2,7 +2,7 @@
 # colour230 = bright yellow
 
 # default statusbar colors
-set-option -g status-style "bg=colour230"
+set-option -g status-style "default"
 
 set-option -g status-left-style "fg=colour242"
 # set-option -g status-right-style "bold"
