e/E for panes exchange

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -62,9 +62,9 @@ set-option -g display-panes-time 3000
 # set-option -g status-interval 10
 
 # Terminal emulator window title
-set-option -g set-titles on
+# set-option -g set-titles on
 # Use hostname (@#h) in set-titles-string with SSH.
-if-shell 'test -n "$SSH_CONNECTION"' 'set -g set-titles-string "[tmux: #S:#I.#P @#h] #T"' 'set -g set-titles-string "[tmux: #S:#I.#P] #T"'
+# if-shell 'test -n "$SSH_CONNECTION"' 'set -g set-titles-string "[tmux: #S:#I.#P @#h] #T"' 'set -g set-titles-string "[tmux: #S:#I.#P] #T"'
 
 # unbind-key C-b (the default prefix)
 unbind-key C-b
@@ -202,9 +202,11 @@ bind-key 0 set-window-option synchronize-panes \; display-message "synchronize-p
 
 # Marked pane must be present (prefix-m), for the following to work
 # The marked pane will be used as -s src-pane, whereas -t dst-pane is active pane
-bind-key b join-pane
+# mnemonic: exchange
+bind-key E join-pane
 
 # join the last active pane/window to the current window.
+# mnemonic: exchange
 bind-key e join-pane -s !
 
 # Move pane to new Tab(window)
@@ -298,4 +300,5 @@ set -g @plugin 'Morantron/tmux-fingers'
 # set -g @plugin 'jbnicolai/tmux-fpp'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 run '~/.tmux/plugins/tpm/tpm'
