tmux-theme-dark update

--- a/tmux/tmux-theme-dark.conf
+++ b/tmux/tmux-theme-dark.conf
@@ -40,5 +40,5 @@ set -g @cpu_medium_fg_color "#[fg=colour236]"
 set -g @cpu_high_fg_color "#[fg=colour236]"
 
 # set -g @fingers-hint-format "#[bg=white,fg=colour230,bold]%s"
-set -g @fingers-hint-format "#[bg=red,fg=black]%s"
-set -g @fingers-hint-format-nocompact "#[bg=yellow,fg=black][%s]"
+set -g @fingers-hint-format "#[bg=yellow,fg=colour236]%s"
+set -g @fingers-hint-format-nocompact "#[bg=yellow,fg=colour236][%s]"
