--- a/tmux_ssh/.tmux.conf
+++ b/tmux_ssh/.tmux.conf
@@ -81,13 +81,13 @@ set-option -g status-keys emacs
 set-option -g focus-events on
 
 # start window numbers at 1 to match keyboard order with tmux window order
-set-option -g base-index 1
+# set-option -g base-index 1
 
 # renumber windows sequentially after closing any of them
 set-option -g renumber-windows on
 
 # increase scrollback lines
-set-option -g history-limit 10000
+set-option -g history-limit 14000
 
 # Mouse
 # set-option -g mouse on
@@ -149,7 +149,7 @@ bind-key M-s run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of wi
 # C-d   = halfpage-down
 # C-u   = halfpage-up
 # default: # list-buffers
-bind-key '#' copy-mode
+# bind-key '#' copy-mode
 
 is_tmux_modern='expr $TMUX_VERSION \>= 2.4'
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi y send -X copy-selection" "bind -tvi-copy y copy-selection"
@@ -158,33 +158,12 @@ if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi Tab send -X halfpage-down" "bind
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi J send -X -N5 cursor-down"
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi K send -X -N5 cursor-up"
 
-# Switch to last session
-bind-key g switch-client -l
-bind-key 1 switch-client -p
-bind-key 2 switch-client -n
-
-# default: ( switch-client -p
-bind-key ( select-window -t :=1
-# default: ) switch-client -n
-bind-key ) select-window -t :=2
-# default: } swap-pane -D
-bind-key } select-window -t :=3
-bind-key + select-window -t :=4
-# default: { swap-pane -U
-bind-key { select-window -t :=5
-# default: ] paste-buffer
-bind-key ] select-window -t :=6
-# default: [ copy-mode
-bind-key [ select-window -t :=7
-# default: ! break-pane
-bind-key ! select-window -t :=8
-# default: = choose-buffer
-bind-key = select-window -t :=9
-bind-key * choose-buffer
-
 # switch to last window
 # default: Space next-layout
 bind-key Space last-window
+
+bind-key g next-window
+bind-key l switch-client -l
 
 unbind-key &
 bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
@@ -193,7 +172,7 @@ bind-key \; command-prompt
 
 # Synchronize panes
 # https://sanctum.geek.nz/arabesque/sync-tmux-panes/
-bind-key 0 set-window-option synchronize-panes \; display-message "synchronize-panes: #{?synchronize-panes,on,off}"
+# bind-key 0 set-window-option synchronize-panes \; display-message "synchronize-panes: #{?synchronize-panes,on,off}"
 
 # pane movement
 # http://unix.stackexchange.com/questions/14300/moving-tmux-pane-to-window
@@ -210,13 +189,12 @@ bind-key E join-pane
 bind-key e join-pane -s !
 
 # Move pane to new Tab(window)
+# default: ! break-pane
 bind-key T break-pane
 
 # swap the last active pane/window with the current window.
 # default: r refresh-client
 bind-key r swap-pane -s !
-bind-key 5 swap-pane -U
-bind-key 3 swap-pane -D
 
 # jump between panes
 # default: o select-pane -t :.+
@@ -227,8 +205,7 @@ bind-key O select-pane -t :.-
 bind-key -r H resize-pane -L 5
 bind-key -r J resize-pane -D 5
 bind-key -r K resize-pane -U 5
-# default: L switch-client -l
-bind-key -r L resize-pane -R 5
+bind-key -r N resize-pane -R 5
 
 # pane_split_bindings
 # https://github.com/tmux-plugins/tmux-pain-control/blob/master/screenshots/pane_splitting.gif
@@ -242,15 +219,15 @@ bind-key '"' split-window -v -c "#{pane_current_path}"
 
 # window_move_bindings
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
-bind-key -r > swap-window -t :+
-bind-key -r < swap-window -t :-
-bind-key ^ swap-window -t 1
+bind-key -r ">" swap-window -t :+
+bind-key -r "<" swap-window -t :-
+bind-key "^" swap-window -t 0
 
 # pane_navigation_bindings
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
-bind-key l select-pane -R
+bind-key n select-pane -R
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -266,6 +243,10 @@ bind-key l select-pane -R
 # bind-key -Tcopy-mode-vi C-c select-pane -R
 # bind-key -Tcopy-mode-vi C-\ select-pane -l
 
+# send prefix key to nested tmux session
+# <C-Space><C-Space> (whithout depressing ctrl)
+# bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
+
 # bind-key -n C-l send-keys "C-c"
 # Restoring Clear Screen (C-l)
 # mnemonic <C-u> clears line in zsh
@@ -275,13 +256,12 @@ bind-key u send-keys C-l
 bind-key M-v select-layout even-horizontal
 bind-key M-h select-layout even-vertical
 bind-key M-t select-layout tiled
-# default: q display-panes
-bind-key q next-layout
-bind-key Q previous-layout
 
-# send prefix key to nested tmux session
-# <C-Space><C-Space> (whithout depressing ctrl)
-# bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
+# default: L switch-client -l
+bind-key -r L next-layout
+# bind-key -r L previous-layout
+
+# default: q display-panes
 bind-key a display-panes
 
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
