--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -247,7 +247,7 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)
 # <C-Space><C-Space> (whithout depressing ctrl)
 bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
 
-bind-key -n C-l send-keys "C-c"
+# bind-key -n C-l send-keys "C-c"
 # Restoring Clear Screen (C-l)
 # mnemonic <C-u> clears line in zsh
 bind-key u send-keys C-l
