--- a/tmux/tmux-theme-light.conf
+++ b/tmux/tmux-theme-light.conf
@@ -22,8 +22,8 @@ set-window-option -g window-status-bell-style "bg=red,fg=colour230"
 # pane border
 # set-option -g pane-border-status bottom
 # set-option -g pane-border-format "#{pane_index} #{pane_current_command}"
-set-option -g pane-border-fg white
-set-option -g pane-active-border-fg yellow
+set-option -g pane-border-fg colour144
+set-option -g pane-active-border-fg colour178
 
 # message text
 set-option -g message-style "fg=brightred"
