tmux symmetrics [on],[hu],[a-]

--- a/tmux/tmux-theme-light.conf
+++ b/tmux/tmux-theme-light.conf
@@ -40,5 +40,5 @@ set -g @cpu_medium_fg_color "#[fg=colour230]"
 set -g @cpu_high_fg_color "#[fg=colour230]"
 
 # set -g @fingers-hint-format "#[bg=white,fg=colour230,bold]%s"
-set -g @fingers-hint-format "#[bg=white,fg=colour230]%s"
-set -g @fingers-hint-format-nocompact "#[bg=white,fg=colour230][%s]"
+set -g @fingers-hint-format "#[bg=black,fg=white]%s"
+set -g @fingers-hint-format-nocompact "#[bg=black,fg=white][%s]"
