--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -148,8 +148,6 @@ bind-key M-s run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of wi
 # Enter = copy-selection-and-cancel
 # C-d   = halfpage-down
 # C-u   = halfpage-up
-# default: # list-buffers
-# bind-key '#' copy-mode
 
 is_tmux_modern='expr $TMUX_VERSION \>= 2.4'
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi y send -X copy-selection" "bind -tvi-copy y copy-selection"
@@ -162,13 +160,19 @@ if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi K send -X -N5 cursor-up"
 # default: Space next-layout
 bind-key Space last-window
 
-bind-key g next-window
-bind-key l switch-client -l
+# default: L switch-client -l
+bind-key g switch-client -l
 
 unbind-key &
 bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
 
 bind-key \; command-prompt
+
+# '[' copy-mode
+# ']' paste-buffer
+# '#' list-buffers
+# '=' choose-buffer
+bind-key * choose-buffer
 
 # Synchronize panes
 # https://sanctum.geek.nz/arabesque/sync-tmux-panes/
@@ -198,36 +202,41 @@ bind-key r swap-pane -s !
 
 # jump between panes
 # default: o select-pane -t :.+
-bind-key O select-pane -t :.-
+bind-key l select-pane -t :.-
+bind-key p select-pane -t :.+
+# o is symmetric with n
+bind-key o previous-window
 
 # pane_resizing_bindings
 # https://github.com/tmux-plugins/tmux-pain-control
-bind-key -r H resize-pane -L 5
-bind-key -r J resize-pane -D 5
-bind-key -r K resize-pane -U 5
-bind-key -r N resize-pane -R 5
+bind-key -r H resize-pane -L 4
+bind-key -r J resize-pane -D 4
+bind-key -r K resize-pane -U 4
+bind-key -r N resize-pane -R 4
 
 # pane_split_bindings
 # https://github.com/tmux-plugins/tmux-pain-control/blob/master/screenshots/pane_splitting.gif
-bind-key "|" split-window -h -c "#{pane_current_path}"
-bind-key "\\" split-window -fh -c "#{pane_current_path}"
+# a/A is symmetric with "-"
+bind-key a split-window -h -c "#{pane_current_path}"
+bind-key A split-window -fh -c "#{pane_current_path}"
 # default: - delete-buffer
 bind-key "-" split-window -v -c "#{pane_current_path}"
 bind-key "_" split-window -fv -c "#{pane_current_path}"
-bind-key "%" split-window -h -c "#{pane_current_path}"
-bind-key '"' split-window -v -c "#{pane_current_path}"
+# bind-key "%" split-window -h -c "#{pane_current_path}"
+# bind-key '"' split-window -v -c "#{pane_current_path}"
 
 # window_move_bindings
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
 bind-key -r ">" swap-window -t :+
 bind-key -r "<" swap-window -t :-
-bind-key "^" swap-window -t 0
+bind-key ":" swap-window -t 0
 
 # pane_navigation_bindings
 bind-key h select-pane -L
+# u is symmetric with h
+bind-key u select-pane -R
 bind-key j select-pane -D
 bind-key k select-pane -U
-bind-key n select-pane -R
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -250,19 +259,18 @@ bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
 # bind-key -n C-l send-keys "C-c"
 # Restoring Clear Screen (C-l)
 # mnemonic <C-u> clears line in zsh
-bind-key u send-keys C-l
+# bind-key u send-keys C-l
 
 # quick layouts preset
 bind-key M-v select-layout even-horizontal
 bind-key M-h select-layout even-vertical
 bind-key M-t select-layout tiled
 
-# default: L switch-client -l
-bind-key -r L next-layout
-# bind-key -r L previous-layout
-
 # default: q display-panes
-bind-key a display-panes
+bind-key -r q next-layout
+bind-key -r Q previous-layout
+# mnemonic buffer indices
+bind-key b display-panes
 
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
